--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
