--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.5.0",
+    "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.6",
     "sass": "^1.66.1",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
