--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "global.d.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.ts", "vue.d.ts"],
   "exclude": [],
   "compilerOptions": {
     "composite": true,
