--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "sass": "^1.66.1",
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-toast-notification": "^3.1.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
