--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "realtime-chat-client",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -13,6 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.11.2",
+    "@cloudinary/vue": "^1.11.2",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.5.0",
