--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -17,7 +17,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
   },
-  "include": ["src/**/*", "index.ts"],
+  "include": ["src/**/*", "index.ts", "cloudinary.ts", "cloudinary.ts"],
   "exclude": ["node_modules"],
   "lib": ["ESNext"],
   "ts-node": {
