--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "prettier": "^3.0.0",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
+    "vite-svg-loader": "^4.0.0",
     "vitest": "^0.34.2",
     "vue-tsc": "^1.8.8"
   }
