feat: add text field component

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -1,10 +1,11 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.ts", "vue.d.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.ts", "vue.d.ts", "src/**/*.json"],
   "exclude": [],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "resolveJsonModule": true,
     "paths": {
       "@/*": ["./src/*"]
     }
