--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "browserslist": ["last 2 versions", "not dead", "> 0.2%"],
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -37,10 +38,12 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.0",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
